Add my first list

--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
   <meta charset="utf-8">
   <title>list'n'grids</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <main>
+    <h1>Prehistoric mammals</h1>
 
+    <ol>
+      <li>
+        <div>
+          <img>
+          <h2>
+          <p>
+          <a>
+        </div>
+      </li>
+    </ol>
+
+  </main>
 </body>
 </html>
