--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main>
     <h1>Prehistoric mammals</h1>
 
-    <ol>
+    <ol class="grid">
       <li class="unit xs-1 s-1 m-1-2 l-1-2">
         <div class="card">
           <img src="images/arsinoitherium.jpg" alt="arsinoitherium">
