Add proper padding

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <main>
+  <main class="island-1-2">
     <h1>Prehistoric mammals</h1>
 
     <ol class="grid">
       <li class="unit xs-1 s-1 m-1-2 l-1-2">
-        <div class="card">
-          <img src="images/arsinoitherium.jpg" alt="arsinoitherium">
+        <div class="card island-1-2">
+          <img class="img-flex" src="images/arsinoitherium.jpg" alt="arsinoitherium">
           <h2>Arsinoitherium</h2>
           <p>Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
           <a href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
@@ -24,8 +24,8 @@
       </li>
 
       <li class="unit xs-1 s-1 m-1-2 l-1-2">
-        <div class="card">
-          <img src="images/elasmotherium.jpg" alt="elasmotherium">
+        <div class="card island-1-2">
+          <img class="img-flex" src="images/elasmotherium.jpg" alt="elasmotherium">
           <h2>Elasmotherium</h2>
           <p>Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
           <a href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
@@ -33,8 +33,8 @@
       </li>
 
       <li class="unit xs-1 s-1 m-1-2 l-1-2">
-        <div class="card">
-          <img src="images/glyptodon.jpg" alt="glyptodon">
+        <div class="card island-1-2">
+          <img class="img-flex" src="images/glyptodon.jpg" alt="glyptodon">
           <h2>Glyptodon</h2>
           <p>Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
           <a href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon</a>
@@ -42,8 +42,8 @@
       </li>
 
       <li class="unit xs-1 s-1 m-1-2 l-1-2">
-        <div class="card">
-          <img src="images/megatherium.jpg" alt="megatherium">
+        <div class="card island-1-2">
+          <img class="img-flex" src="images/megatherium.jpg" alt="megatherium">
           <h2>Megatherium</h2>
           <p>Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
           <a href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Megatherium</a>
