Take away the padding

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="card island-1-2">
           <img class="img-flex" src="images/arsinoitherium.jpg" alt="arsinoitherium">
           <h2>Arsinoitherium</h2>
-          <p>Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
+          <p class="push-1-2">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
           <a href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
         </div>
       </li>
