Add a push to the list

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Prehistoric mammals</h1>
 
     <ol class="grid">
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2 push-1-2">
         <div class="card island-1-2">
           <img class="img-flex" src="images/arsinoitherium.jpg" alt="arsinoitherium">
           <h2 class="pad-t-1-4 push-1-2">Arsinoitherium</h2>
@@ -23,7 +23,7 @@
         </div>
       </li>
 
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2 push-1-2">
         <div class="card island-1-2">
           <img class="img-flex" src="images/elasmotherium.jpg" alt="elasmotherium">
           <h2 class="pad-t-1-4 push-1-2">Elasmotherium</h2>
@@ -32,7 +32,7 @@
         </div>
       </li>
 
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2 push-1-2">
         <div class="card island-1-2">
           <img class="img-flex" src="images/glyptodon.jpg" alt="glyptodon">
           <h2 class="pad-t-1-4 push-1-2">Glyptodon</h2>
@@ -41,7 +41,7 @@
         </div>
       </li>
 
-      <li class="unit xs-1 s-1 m-1-2 l-1-2">
+      <li class="unit xs-1 s-1 m-1-2 l-1-2 push-1-2">
         <div class="card island-1-2">
           <img class="img-flex" src="images/megatherium.jpg" alt="megatherium">
           <h2 class="pad-t-1-4 push-1-2">Megatherium</h2>
