--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li class="unit xs-1 s-1 m-1-2 l-1-2 push-1-2 pad-t-1-4 unit-content-distribute island-1-4">
         <div class="card island-1-2 unit-content-distribute">
           <img class="img-flex" src="images/arsinoitherium.jpg" alt="arsinoitherium">
-          <h2 class="pad-t-1-2 push-1-2 tera">Arsinoitherium</h2>
+          <h2 class="pad-t-1-2 push-1-2 giga">Arsinoitherium</h2>
           <p class="push-1-2 content-fill">Arsinoitherium is an extinct genus mammal that were superficially rhinoceros-like herbivores that lived in northern Africa from 36 to 30 million years ago.</p>
           <a class="giga" href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Arsinoitherium</a>
         </div>
@@ -26,7 +26,7 @@
       <li class="unit xs-1 s-1 m-1-2 l-1-2 push-1-2 island-1-4 unit-content-distribute">
         <div class="card island-1-2 unit-content-distribute">
           <img class="img-flex" src="images/elasmotherium.jpg" alt="elasmotherium">
-          <h2 class="pad-t-1-2 push-1-2 tera">Elasmotherium</h2>
+          <h2 class="pad-t-1-2 push-1-2 giga">Elasmotherium</h2>
           <p class="push-1-2 content-fill">Elasmotherium, also known as the Giant Siberian Unicorn, is an extinct genus of rhinoceros endemic to Eurasia during the Late Pliocene through the Pleistocene.</p>
           <a class="giga" href="https://en.wikipedia.org/wiki/Elasmotherium">Learn more about Elasmotherium</a>
         </div>
@@ -35,7 +35,7 @@
       <li class="unit xs-1 s-1 m-1-2 l-1-2 push-1-2 island-1-4 unit-content-distribute">
         <div class="card island-1-2 unit-content-distribute">
           <img class="img-flex" src="images/glyptodon.jpg" alt="glyptodon">
-          <h2 class="pad-t-1-2 push-1-2 tera">Glyptodon</h2>
+          <h2 class="pad-t-1-2 push-1-2 giga">Glyptodon</h2>
           <p class="content-fill">Glyptodon was a large, armored mammal, a relative of armadillos that lived during the Pleistocene epoch.</p>
           <a class="giga" href="https://en.wikipedia.org/wiki/Glyptodon">Learn more about Glyptodon</a>
         </div>
@@ -44,7 +44,7 @@
       <li class="unit xs-1 s-1 m-1-2 l-1-2 push-1-2 island-1-4 unit-content-distribute">
         <div class="card island-1-2 unit-content-distribute">
           <img class="img-flex" src="images/megatherium.jpg" alt="megatherium">
-          <h2 class="pad-t-1-2 push-1-2 tera">Megatherium</h2>
+          <h2 class="pad-t-1-2 push-1-2 giga">Megatherium</h2>
           <p class="content-fill">Megatherium was a genus of elephant-sized ground sloths endemic to South America that lived from the Early Pliocene to the Pleistocene.</p>
           <a class="giga" href="https://en.wikipedia.org/wiki/Arsinoitherium">Learn more about Megatherium</a>
         </div>
